Fix no thumb img for video, export HTML playlist
+ Add no cover image.
+ Add HTML playlist, can be customized.

--- a/themes/default/css/videos.css
+++ b/themes/default/css/videos.css
@@ -2,3 +2,26 @@
 {
 	margin: auto
 }
+.PlaylistCont #show-list {
+    text-indent: 0px;
+    background: #000 none repeat scroll 0% 0%;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.85) inset;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    font-family: helvetica;
+    color: #000;
+    text-decoration: none;
+    list-style-type: none;
+    list-style-position: inside;
+    padding: 0px;
+    margin-top: -20px;
+    height: 150px;
+}
+#show-list li{
+	display: block;
+    float: left;
+    list-style: outside none none;
+    padding: 15px 0px 0px 11px;
+    line-height: 200%;
+}
+}
