--- a/themes/default/css/videos.css
+++ b/themes/default/css/videos.css
@@ -10,3 +10,22 @@ margin-right: 10px
 	max-height:350px;
 	overflow-y:auto;
 }
+.mg0_10_10 {
+    margin: 0px 10px 10px;
+}
+.pd10_0 {
+    padding: 10px 0px;
+}
+.form_80{
+	width:80%
+}.form_70{
+	width:70%
+}.form_60{
+	width:60%
+}.form_50{
+	width:50%
+}.form_40{
+	width:40%
+}.form_30{
+	width:30%
+}
