--- a/themes/default/css/videos.css
+++ b/themes/default/css/videos.css
@@ -15,7 +15,7 @@ img.imghome{
 }
 .mgr_10
 {
-margin-right: 10px	
+margin-right: 10px
 }
 .PlaylistCont #show-list {
 	max-height:350px;
@@ -69,4 +69,12 @@ margin-right: 10px
 .spacer::before{
 	content: "•";
 margin: 0px 5px;
+}
+ul.uploadinfo{
+	padding: 0;
+	font-style: italic;
+	font-size: 10pt
+}
+.page-header{
+	margin: 0
 }
