--- a/themes/default/css/videos.css
+++ b/themes/default/css/videos.css
@@ -1,7 +1,15 @@
-﻿.videos-home-thumbnail{
+﻿.videos_list{
+	margin-bottom: 7px;
+}
+
+.videos_list ul li{
+	margin: 0px;
+}
+
+.videos-home-thumbnail{
 	background: #DDD none repeat scroll 0% 0%;
 }
-.videos-home-info h3, .videos_list h4, .videos-text h3, .videos-thumbnail h3, .related_new_videos .thumbnail h4 , .related_videos .thumbnail h4 {
+.videos-home-info h3, .videos_list h4, .videos_list h3, .videos-text h3, .videos-thumbnail h3, .related_new_videos .thumbnail h4 , .related_videos .thumbnail h4 {
     line-height: 1.5;
     height: 40px;
 	overflow: hidden
@@ -77,4 +85,10 @@ ul.uploadinfo{
 }
 .page-header{
 	margin: 0
+}
+.uploader{
+	margin-bottom:5px;
+}
+.uploader_info h4{
+	padding:5px
 }
