Fix logic, security and template

--- a/themes/default/css/videos.css
+++ b/themes/default/css/videos.css
@@ -92,3 +92,102 @@ ul.uploadinfo{
 .uploader_info h4{
 	padding:5px
 }
+.uploader img{
+	margin:5px
+}
+.hitstotal{
+	font-family: Roboto,arial,sans-serif;
+	font-size: 13px;
+	font-weight: bold;
+}
+.group {
+    display: block;
+    clear: both;
+}
+.media-func {
+    padding-bottom: 20px;
+}
+.button-style-1 {
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    padding: 3px 10px 3px 5px;
+    color: #808080;
+    border: 1px solid #e5e5e5;
+    background: #f7f7f7;
+    margin-right: 5px;
+    line-height: 0;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
+.close, .zicon-favorite,.zicon-add, .zicon-remove, .zicon-remove-1, .zicon-playlist-1, .zicon-play-1 {
+    background-image: url("../images/videos/icon.png");
+    background-repeat: no-repeat;
+}
+.zicon-arrow-left-1, .zicon-arrow-right-1, .zicon-hand-like, .zicon-hand-unlike, .zicon-music-note, .zicon-arrow, .zicon-add, .zicon-favorite, .zicon-remove, .zicon-remove-1, .zicon-remove-2, .zicon-edit-1, .zicon-playlist-1, .zicon-play-1 {
+    width: 25px;
+    height: 25px;
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    cursor: pointer;
+}
+.button-style-1 span {
+    position: relative;
+    top: -7px;
+    font-size: 12px;
+}
+.button-style-1 .zicon-add {
+    background-position: -26px -1164px;
+}
+.button-style-1 .zicon-favorite {
+    background-position: 0px -2759px;
+}
+.add-playlist-region .playlist-region li {
+    border-bottom: 1px solid #e6e6e6;
+    position: relative;
+    padding: 12px 0 12px 40px;
+}
+.add-playlist-region .playlist-region li .fix-button {
+    display: block;
+    width: 66px;
+    height: 28px;
+    line-height: 14px;
+    border: 1px solid #ddd;
+    background-color: #f1f1f1;
+    text-align: center;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    margin-top: -14px;
+    margin-right: 15px;
+    color: #428bca;
+}
+.add-playlist-region h4 {
+    padding-bottom: 15px;
+    border-bottom: 1px solid #e6e6e6;
+    position: relative;
+}
+.close {
+    display: block;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    right: 0;
+    background-position: -25px -1139px;
+    cursor: pointer;
+    top: -3px;
+    opacity: 0.5;
+    -moz-opacity: 0.5;
+    -khtml-opacity: 0.5;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+    filter: alpha(opacity=50);
+    z-index: 9;
+}
+.changeme{
+	background: none
+}
+.newme{
+	background: yellow
+}
