--- a/themes/default/css/videos.css
+++ b/themes/default/css/videos.css
@@ -1,4 +1,20 @@
-﻿.videos_list{
+﻿/* For modern browsers */
+.cf:before,
+.cf:after {
+    content:"";
+    display:table;
+}
+
+.cf:after {
+    clear:both;
+}
+
+/* For IE 6/7 (trigger hasLayout) */
+.cf {
+    zoom:1;
+}
+
+.videos_list{
 	margin-bottom: 7px;
 }
 
@@ -148,6 +164,9 @@ ul.uploadinfo{
     border-bottom: 1px solid #e6e6e6;
     position: relative;
     padding: 12px 0 12px 40px;
+}
+.add-playlist-region .playlist-region li:last-child{
+	border-bottom: 1px solid transparent;
 }
 .add-playlist-region .playlist-region li .fix-button {
     display: block;
